# customer-personality-analysis-elt

customer-personality-analysis-elt/: LICENSE  pyproject.toml
customer-personality-analysis-elt/sql/: children_teenagers_spending.sql  complaints_spending_campaign_response.sql  create_transformation_table.sql  customer_loyalty_spending.sql  demographic_income_spending.sql  discount_purchases_overall_spending.sql  promotion_response_demographics.sql.sql
customer-personality-analysis-elt/src/: connection.py  extract_to_tables.py  marketing_campaign.csv  transformation.py
customer-personality-analysis-elt/src/util/: transformation_data_insertion_queries.py
